--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       <li>Pour batter into the cake pan and bake for 30-35 minutes.</li>
       <li>Let cool before serving. Enjoy!</li>
     </ol>
+    <button id="highlight-ingredients">Highlight Ingredients</button>
+    <button id="check-instructions">Check Instructions</button>
+    <button id="reset-instructions">Reset Instructions</button>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
